--- a/.github/workflows/R3G2.yml
+++ b/.github/workflows/R3G2.yml
@@ -8,7 +8,7 @@
 # Description: Build OpenWrt using GitHub Actions
 #
 
-name: Build Mi R3G OpenWrt
+name: Build Mi R3G_last OpenWrt
 
 on:
   repository_dispatch:
@@ -35,7 +35,7 @@ env:
 
 jobs:
   build:
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-last
 
     steps:
     - name: Checkout
