--- a/.github/workflows/R3G2.yml
+++ b/.github/workflows/R3G2.yml
@@ -35,8 +35,7 @@ env:
 
 jobs:
   build:
-    runs-on: ubuntu-last
-
+    runs-on: ubuntu-latest
     steps:
     - name: Checkout
       uses: actions/checkout@main
